--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,8 @@ environment:
   sdk: '>=3.1.3 <4.0.0'
 
 dependencies:
-  firebase_core: ^2.24.2
+  firebase_core: ^2.30.1
+  cloud_firestore: ^4.17.2
   flutter:
     sdk: flutter
 
