--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,15 @@
 name: fp_ppb_e8
 description: A new Flutter project.
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=3.1.3 <4.0.0'
+  sdk: ">=3.1.3 <4.0.0"
 
 dependencies:
-  firebase_core: ^2.30.1
-  cloud_firestore: ^4.17.2
+  firebase_core: ^2.24.2
+  firebase_auth:
+  cloud_firestore:
   flutter:
     sdk: flutter
 
