--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   firebase_core: ^2.24.2
   firebase_auth:
   cloud_firestore:
+  flutter_multiselect: ^1.0.0
+  multi_select_flutter: ^4.0.0
   flutter:
     sdk: flutter
 
